src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>AX_Order_Number__c</fullName>
        <label>ERP Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Discount_Model__c</fullName>
        <formula>Account.Discount_Model__c + &quot; &quot;+ Account.Discount_Model_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field details the standing discount (if any) on the Account in MOVEX.</inlineHelpText>
        <label>Account Discount Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrdersOwned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Rating__c</fullName>
        <formula>text(Account.Rating)</formula>
        <label>Account Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Case(Account.RecordTypeId ,&quot;01220000000DiSB&quot;,&quot;Clinical Customer&quot;, &quot;01220000000DiSf&quot;, &quot;Clinical PROSPECT&quot;, &quot;01220000000DZSL&quot;, &quot;Lab Customer&quot;, &quot;01220000000DZSV&quot;, &quot;Lab PROSPECT&quot;,&quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Sample_in_AX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to track sample in AX</description>
        <label>Payer Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>DENTSPLY</value>
            </filterItems>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Free Goods, Internal Sales Rep</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Orders</relationshipLabel>
        <relationshipName>Sample_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>ID from related CFE</description>
        <inlineHelpText>ID from related CFE</inlineHelpText>
        <label>Activity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_edit_dealer__c</fullName>
        <formula>HYPERLINK(&apos;apex/orderDealerVF?recordId=&apos; + Id, $Label.Add_edit_dealer, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add/edit distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allowed discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_payment_terms_months__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Allowed payment terms (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_of_Samples_for_Sales_Rep__c</fullName>
        <label>Amount of Samples for Sales Rep</label>
        <summarizedField>OrderItem.Value_of_Samples_for_Sales_Rep__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_of_free_of_charge_products__c</fullName>
        <label>Amount of free of charge products</label>
        <summarizedField>OrderItem.Value_of_free_product__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApprovalLevelInt__c</fullName>
        <label>Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevelSecondaryInt__c</fullName>
        <label>Approval Level (secondary)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevel__c</fullName>
        <formula>CASE( ApprovalLevelInt__c, 1, &apos;Manager&apos;, 2, &apos;Area Manager&apos;, 3, &apos;Sales Director&apos;, &apos;No approval needed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_check_global__c</fullName>
        <defaultValue>&quot;Sales rep&quot;</defaultValue>
        <description>Used for checking if an approval is needed</description>
        <label>Approval check (global)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales rep</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_or_Rejection_Notes_to_Rep__c</fullName>
        <label>Approval or Rejection Notes to Rep</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approvals_Needed__c</fullName>
        <formula>CASE( Status, &quot;Created&quot;,
IF( Total_of_Products_on_this_Order__c =0,  Image(&quot;/resource/1415991748000/NAOrdersAddProduct&quot;, &quot;Add Products&quot;, 80,195),

IF(  SIMPLANT_Director_Approval__c =TRUE, IMAGE(&quot;/resource/1415307435000/NAApprovalsSIMPLANT&quot;, &quot;Additional Approvals Needed - click Submit for Approval to gain approval and submit to Customer Service&quot;,80,195),

IF( Regional_Manager_Approval_Required__c =TRUE,
IMAGE(&quot;/resource/1415307452000/NAApprovalsRM&quot;, &quot;RM Approval Needed - click Submit for Approval and send to Customer Service&quot;,80,195),

IF(Waive_Shipping_Charges__c=TRUE,IMAGE(&quot;/resource/1415307452000/NAApprovalsRM&quot;, &quot;RM Approval Needed - click Submit for Approval and send to Customer Service&quot;,80,195),
IMAGE(&quot;/resource/1415307396000/NAApprovalsNoApprovalNeeded&quot;, 

&quot;No Additional Approvals Needed - click Submit for Approval to gain approval and send to Customer Service&quot;,80,195))))),



&quot;Submitted&quot;, IMAGE(&quot;/resource/1415990458000/NAApprovalsSUBMITTED&quot;, &quot;Submitted&quot;, 80, 195),&quot;Processing&quot;, IMAGE(&quot;/resource/1415990458000/NAApprovalsSUBMITTED&quot;, &quot;Pending CS Processing&quot;,80,195), &quot;On Hold&quot;, IMAGE(&quot;/resource/1415991296000/NAOrdersONHOLD&quot;,&quot;On Hold&quot;,200,200), &quot;Rejected&quot;, Image(&quot;/resource/1415991353000/NAOrdersRejected&quot;,&quot;Rejected&quot;,200,200), &quot;Activated&quot;, Image(&quot;/resource/1415991501000/NAOrdersActivated&quot;, &quot;Activated&quot;, 80,95),Image(&quot;/resource/1415991748000/NAOrdersAddProduct&quot;, &quot;Add Products&quot;, 80,195))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status and Approvals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Director_Approval_Required__c</fullName>
        <formula>AND( Regional_Manager_Approval_Required__c ,  Regional_Manager_Approved__c =TRUE, Waive_Shipping_Charges__c = TRUE,
OR( 
TEXT( Shipping_Method__c )=&quot;UFJ: F IntnlPriority: FedEx Intnl Priority Warehouse&quot;,

TEXT( Shipping_Method__c )=&quot;UPS Next Day end of day - UXC $20.50&quot;,

TEXT( Shipping_Method__c )=&quot;UPS Saturday 10:30am - UXH $49.50&quot;,

TEXT( Shipping_Method__c )=&quot;UPS COD Next Day 10:30 AM: UX2&quot;,

TEXT( Shipping_Method__c )=&quot;UPS COD Next Day PM: UX3&quot;,

TEXT( Shipping_Method__c )=&quot;UPS COD 2nd Day PM:  UX5&quot;,

TEXT( Shipping_Method__c )=&quot;UPS Next Day 10:30am - UXB $27.00&quot;,

TEXT( Shipping_Method__c )=&quot;FedEx Next Day 10:30am - UFB $27.00&quot;,

TEXT( Shipping_Method__c )=&quot;FedEx Next Day end of day - UFC $20.50&quot;,

TEXT( Shipping_Method__c )=&quot;FedEx Next Day Early AM - 6-8:30am - UFA $49.50&quot;,

TEXT(Shipping_Method__c )=&quot;FedEx Saturday 10:30am - UFH $49.50&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Director Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areas_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Areas Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backorder_Notes__c</fullName>
        <label>Backorder Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Inbox_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS Inbox Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Inbox_Prospect_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by a workflow on the approval process - if a  prospect needs to have a Movex Customer Created, the NA CS Inbox team creates the Movex Customer in a status 10, adds the Movex Number to the Account iN SFDC, and clicks &quot;Approve&quot;  on the Order to move the Order to the Project Team to release the Movex Customer from Status 10 to 20</description>
        <inlineHelpText>Checked by a workflow on the approval process - if a  prospect needs to have a Movex Customer Created, the NA CS Inbox team creates the Movex Customer in a status 10, adds the Movex Number to the Account iN SFDC, and clicks &quot;Approve&quot;  on the Order</inlineHelpText>
        <label>CS Inbox Prospect Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Ownership_Assigned__c</fullName>
        <label>CS Ownership Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Proj_Team_Movex_Customer_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by the approval process when the CS Project Team Member releases and merges the movex customer</description>
        <label>CS Proj Team Movex Customer Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Project_Team_Member_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Project Team Member Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the Campaign to which this order should be related</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Leader_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Leader approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Leader_e_mail__c</fullName>
        <label>Commercial Leader e-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Communication_to_Customer_Service__c</fullName>
        <label>Communication to Customer Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_e_mail__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact e-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Bundles__c</fullName>
        <label>Count Bundles</label>
        <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_FOC_Products_from_CS__c</fullName>
        <description>Count the number of free of charge products to be send out from the customer service</description>
        <label>Count FOC Products from customer service</label>
        <summaryFilterItems>
            <field>OrderItem.Free_of_Charge_Delivery__c</field>
            <operation>equals</operation>
            <value>Customer Service</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_FOC_Products_not_from_dealer__c</fullName>
        <label>Count FOC Products not from dealer</label>
        <summaryFilterItems>
            <field>OrderItem.Free_of_Charge_Delivery__c</field>
            <operation>equals</operation>
            <value>Customer Service, Sales Rep</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Offer_Codes__c</fullName>
        <description>This Roll-Up Summary field counts the OrderItems, which have an Offer Code applied to.</description>
        <label>Count Offer Codes</label>
        <summaryFilterItems>
            <field>OrderItem.Offer_Code_Applied_Number__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_products__c</fullName>
        <label>Count products</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponCodeCount__c</fullName>
        <label>Coupon Code Count</label>
        <summaryFilterItems>
            <field>OrderItem.UseCoupon__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CreatedByName__c</fullName>
        <description>Created to be able to show the created by name in order related list on Account.</description>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_My_Direct_Reports__c</fullName>
        <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
        <label>Created by My Direct Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_My_Second_Direct_Reports__c</fullName>
        <description>Created by the users managed by my direct reports</description>
        <formula>IF( CreatedBy.Manager.ManagerId  = $User.Id, True, false)</formula>
        <inlineHelpText>Created by the users managed by my direct reports</inlineHelpText>
        <label>Created by My Second Direct Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_me__c</fullName>
        <description>Dynamic Checkbox that shows if the logged in the user creating the record</description>
        <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
        <label>Created by me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <inlineHelpText>MM/YY</inlineHelpText>
        <label>Credit Card Expiration Date</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Current_approver_ID__c</fullName>
        <label>Current approver ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Credit_Card_Information__c</fullName>
        <label>Customer Credit Card Information</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Alerts__c</fullName>
        <formula>IF(AND( MTF_Evaluation1__c &gt;0, Waive_Shipping_Charges__c =TRUE),  IMAGE(&quot;/resource/1416838977000/NAOrdersMTFandShipping&quot;, &quot;MTF Check and Shipping Waived&quot;,90,250),
if(AND( MTF_Evaluation1__c &gt;0, Waive_Shipping_Charges__c =FALSE), 
 IMAGE(&quot;/resource/1416838931000/NAOrdersMTFNotify&quot;,&quot;Check MTF Documentation&quot;,90,250),
IF(AND(MTF_Evaluation1__c =0, Waive_Shipping_Charges__c =TRUE), 
 IMAGE(&quot;/resource/1416839015000/NAOrdersShippingWaived&quot;,&quot;Shipping is waived&quot;,30,150),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Date_Time_Completed__c</fullName>
        <label>Customer Service Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Email__c</fullName>
        <description>To update the right customer email to be used in the approval process</description>
        <label>Customer Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Processing_Time__c</fullName>
        <formula>if( isblank(CS_Ownership_Assigned__c),(ActivatedDate-Customer_Service_Received__c)*24,(ActivatedDate-CS_Ownership_Assigned__c)*24)</formula>
        <label>Customer Service Processing Time (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Received__c</fullName>
        <label>Customer Service Date/Time Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Rep_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Rep Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>CASE( Account.RecordTypeId , &quot;01220000000DiSB&quot;, IMAGE(&quot;/resource/1417017250000/NAOrdersMovexCustomer&quot;, &quot;Movex Customer&quot;,30,300) ,&quot;01220000000DiSf&quot;, IMAGE(&quot;/resource/1417017556000/NAOrdersProspectCustomer&quot;, &quot;PROSPECT CUSTOMER&quot;,30,300),&quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Preferred_dealer_item__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Preferred_dealer_item__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_notes__c</fullName>
        <label>Notes to dealer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_price_set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer price set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <formula>Owner:User.Manager.Full_Name__c</formula>
        <label>Direct Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountReason__c</fullName>
        <label>Discount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Offer</fullName>
                </value>
                <value>
                    <fullName>Volume Discount</fullName>
                </value>
                <value>
                    <fullName>Bundle Price</fullName>
                </value>
                <value>
                    <fullName>Low Differentiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Approval_Needed__c</fullName>
        <description>For the Approval Process. Determines whether or not this order will need additional approvals. If Greater than 0, the order will need additional manager approval, if not - the order goes straight to Customer Service.</description>
        <label>Discount Approval Needed</label>
        <summarizedField>OrderItem.DiscountApproval_Line_Item__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_to_be_used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Shipping_Type__c</fullName>
        <label>Discounted Shipping Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please make note of the discount in &quot;Communication to Customer Service&quot;</inlineHelpText>
        <label>Discounted Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Missing__c</fullName>
        <formula>if(isblank( Distributor__c ), True, False)</formula>
        <label>Distributor Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_PO_number__c</fullName>
        <label>Distributor PO number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>01220000000ckje</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>01220000000ckja</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>4PL Indonesia email delivery test</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Distributor)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Distributor contact)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_details__c</fullName>
        <label>Distributor details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_email__c</fullName>
        <inlineHelpText>Information coming from the Account&apos;s General Info Email</inlineHelpText>
        <label>Distributor email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ERP_Account_Number_on_Contract__c</fullName>
        <label>ERP Account Number on Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Customer_Number__c</fullName>
        <formula>Account.Movex__c</formula>
        <label>ERP Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <formula>if( UserCountryETM__c =&quot;Portugal&quot;,&quot;00X0J000002PCNE&quot;,&quot;00X0J000002Wl0Z&quot;)</formula>
        <label>Email Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_notes__c</fullName>
        <label>Notes to the customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FOC_included__c</fullName>
        <formula>IF( No_of_FOC_rows__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are free of charge products included?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_products_delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOC products delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstLevelApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaulted to your manager</inlineHelpText>
        <label>First Level Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Shipping_Required__c</fullName>
        <formula>IF(Total_of_Products_on_this_Order__c = Items_at_100_Discount__c, &quot;Free Shipping Required&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Shipping Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_of_Charge_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for NA to check if an entire order is an FOC order</description>
        <label>Free of Charge Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_SFDC_Order__c</fullName>
        <formula>if (contains( RecordType.Name, &quot;global&quot;) , True, False)</formula>
        <label>Global SFDC Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>This is used to show ordered products name</description>
        <label>Item Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Items_at_100_Discount__c</fullName>
        <label># Items at 100% Discount</label>
        <summarizedField>OrderItem.Number_of_Items_at_100_Discount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Used by the North America Implants Customer Service Team to understand where Orders are in the Approval Process via Order List View</description>
        <formula>IF( ISPICKVAL( Status , &quot;Rejected&quot;), &quot;Rejected - with Rep&quot;,

IF( ISPICKVAL( Status , &quot;Activated&quot;), &quot;Complete&quot;,

IF(ISPICKVAL( Status , &quot;Created&quot;), &quot;Sales Rep&quot;,

IF( AND( NOT(ISBLANK(FirstLevelApprover__c)), NOT(ISBLANK(SecondLevelApprover__c)), NOT(ISBLANK(TEXT(Shipping_Method__c))), OR( Pricebook_Name__c = &quot;US Implants Pricing&quot;, Pricebook_Name__c = &quot;US MIS Implants Pricing&quot;, Pricebook_Name__c = &quot;CA Implants Pricing&quot;)),

  IF( AND( ISPICKVAL( Status , &quot;Submitted&quot;), ApprovalLevelInt__c = 1, Regional_Manager_Approved__c = FALSE), &quot;Manager Approval&quot;,

  IF( AND( ISPICKVAL( Status , &quot;Processing&quot;), ApprovalLevelInt__c = 2, Areas_Director_Approved__c = FALSE), &quot;Area Director Approval&quot;,

  IF( AND( ISPICKVAL( Status , &quot;Processing&quot;), ApprovalLevelInt__c &gt;= 3, Current_approver_ID__c = &quot;0050J000006saxpQAA&quot;), &quot;VP Approval&quot;, 

  IF( AND( ISPICKVAL( Status , &quot;Processing&quot;), ApprovalLevelInt__c &gt;= 3, Commercial_Leader_approved__c = FALSE), &quot;VP Approval&quot;, 
  
  &quot;CS Inbox - Order Process&quot;)))),
  
IF( AND( OR(  BEGINS(Pricebook_Name__c, &quot;US IMP&quot;), BEGINS(Pricebook_Name__c, &quot;CA IMP&quot;)), Pricebook_Name__c != &quot;US Implants Demo&quot;),

  IF( AND(Regional_Manager_Approved__c = FALSE, OR( total_discount_on_the_order_c__c &gt; 0, AND(Waive_Shipping_Charges__c = TRUE, OR(BEGINS(TEXT(Shipping_Method__c), &quot;UFJ&quot;), BEGINS(TEXT(Shipping_Method__c), &quot;FedEx Next&quot;), BEGINS(TEXT(Shipping_Method__c), &quot;FedEx Saturday&quot;), BEGINS(TEXT(Shipping_Method__c), &quot;UPS Next&quot;), BEGINS(TEXT(Shipping_Method__c), &quot;UPS Saturday&quot;), BEGINS(TEXT(Shipping_Method__c), &quot;UPS COD&quot;))))), &quot;Manager Approval&quot;,
  
  &quot;CS Inbox - Order Process&quot;), &quot;N/A&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTF_Evaluation1__c</fullName>
        <label>MTF Evaluation</label>
        <summarizedField>OrderItem.MTF_EvaluationNumber__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manager_approval_discount__c</fullName>
        <formula>total_discount_on_the_order_c__c -  Allowed_discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager approval discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Movex_Customer_Number__c</fullName>
        <formula>Account.Movex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Movex Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movex_Order_Number__c</fullName>
        <label>Movex Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movex_Status__c</fullName>
        <formula>TEXT( Account.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Movex Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Area__c</fullName>
        <formula>Account_Owner__r.NA_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA: Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_FOC_rows__c</fullName>
        <label>No of FOC rows</label>
        <summaryFilterItems>
            <field>OrderItem.Free_of_Charge_Delivery__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>